[gd_scene load_steps=2 format=3 uid="uid://dqt7x8m5h2k6r"]

[ext_resource type="Script" uid="uid://caemxwk8ksvcq" path="res://scenes/title/title.gd" id="1_title"]

[node name="Title" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_title")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.15, 1)

[node name="TitleLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -200.0
offset_top = 80.0
offset_right = 200.0
offset_bottom = 140.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 48
text = "Courtesy Clerk"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ButtonContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -100.0
offset_right = 100.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="PlayButton" type="Button" parent="ButtonContainer"]
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
text = "Play"

[node name="NewGameButton" type="Button" parent="ButtonContainer"]
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
text = "New Game"

[node name="SelectFileButton" type="Button" parent="ButtonContainer"]
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
text = "Select File"

[node name="OptionsButton" type="Button" parent="ButtonContainer"]
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
text = "Options"

[node name="ExitButton" type="Button" parent="ButtonContainer"]
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
text = "Exit"
